--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.11.0",
     "react-is": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
