--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.1",
+    "jquery": "^1.9.1",
     "particles-bg": "^2.4.6",
+    "popper.js": "^1.16.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.11.0",
@@ -14,7 +16,8 @@
     "react-scripts": "^3.4.1",
     "react-table": "^7.2.0",
     "react-table-6": "^6.11.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
